# paper-rs

./: Cargo.toml  README.md
src/: main.rs  shader.wgsl
