[package]
name = "paper-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu = "28.0" 
pollster = "0.3"
bytemuck = "1.25.0"
libpulse-binding = "2.30.1"
libpulse-simple-binding = "2.29.0"
realfft = "3.5.0"
layershellev = "0.15.0"
raw-window-handle = "0.6.2"

[profile.release]
strip = true
lto = true
panic = "abort"